--- a/src/client/assets/style.css
+++ b/src/client/assets/style.css
@@ -32,6 +32,14 @@ button{
   font-size: 200%;
   cursor: pointer;
 }
+
+a{
+  color: white;
+}
+
+li{
+  list-style-type: none;
+}
 /*input[type="text"]:focus,
 input[type="text"].focus {
   border-bottom: solid 2px white;
