--- a/src/client/newgame.ejs
+++ b/src/client/newgame.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/static/css/style.css" media="screen" title="no title" charset="utf-8">
+    <script src="/static/js/socket.io.js" charset="utf-8"></script>
     <title>Nouvelle partie</title>
   </head>
   <body>
@@ -14,4 +15,7 @@
       <button type="button" name="rejoinpart">Rejoindre la partie</button>
     </div>
   </body>
+  <script type="text/javascript">
+      var socket = io();
+  </script>
 </html>
