--- a/src/client/name.ejs
+++ b/src/client/name.ejs
@@ -9,8 +9,8 @@
   <body>
     <div class="main">
         <h1>Bienvenue sur Cyborg</h1>
-        <form class="" action="choix" method="post">
-          <input type="text" name="playerName" class="form-control input-lg" placeholder="Entrez votre nom">
+        <form class="" action="changeName" method="post">
+          <input type="text" name="cyborgPlayerName" class="form-control input-lg" placeholder="Entrez votre nom">
           <br>
           <br>
           <button type="submit">OK</button>
@@ -18,10 +18,6 @@
     </div>
   </body>
   <script>
-    var socket = io('http://localhost:8080');
-    // socket.on('news', function (data) {
-    //   console.log(data);
-    //   socket.emit('my other event', { my: 'data' });
-    // });
+    var socket = io();
   </script>
 </html>
