Debut refont avec iFrame

--- a/src/client/static/css/platform.css
+++ b/src/client/static/css/platform.css
@@ -1,10 +1,6 @@
-html{
-  height: 80%;
-}
-
 body{
-  background-color: black;
-  color: white;
+  background-color: #40b55b;
+  color: black;
   text-align: center;
   font-size: 250%;
   height: 100%;
@@ -40,7 +36,3 @@ a{
 li{
   list-style-type: none;
 }
-/*input[type="text"]:focus,
-input[type="text"].focus {
-  border-bottom: solid 2px white;
-}*/
