--- a/src/server/cyborg_modules/welcome/client/chooseGame.ejs
+++ b/src/server/cyborg_modules/welcome/client/chooseGame.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="static/css/platform.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="static/css/welcome.css" media="screen" title="no title" charset="utf-8">
 
     <script src="static/js/jquery-3.2.1.js" charset="utf-8"></script>
 
