--- a/src/server/cyborg_modules/welcome/client/waitforplayer.ejs
+++ b/src/server/cyborg_modules/welcome/client/waitforplayer.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="static/css/platform.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="static/css/welcome.css" media="screen" title="no title" charset="utf-8">
 
     <title></title>
   </head>
