--- a/src/cyborg_modules/welcome/client/chooseGame.ejs
+++ b/src/cyborg_modules/welcome/client/chooseGame.ejs
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+
+    <!-- Ressource partagé à toute les applis ! Rajouté un / devant l'url -->
+    <script src="/static/js/jquery-3.2.1.js" charset="utf-8"></script>
+
+    <!-- Ressource appartenant à l'appli  -->
     <link rel="stylesheet" href="static/css/welcome.css" media="screen" title="no title" charset="utf-8">
 
-    <script src="static/js/jquery-3.2.1.js" charset="utf-8"></script>
-
-    <title></title>
+    <title>Choose game</title>
   </head>
   <body>
     <h1>Choisis un jeu:</h1>
