Delete useless lib folder and add some comments

--- a/src/cyborg_modules/welcome/client/welcome.ejs
+++ b/src/cyborg_modules/welcome/client/welcome.ejs
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- Mon style -->
-    <link rel="stylesheet" href="static/css/welcome.css" media="screen" title="no title" charset="utf-8">
-
+    <!-- Ressource partagé à toute les applis ! Rajouté un / devant l'url -->
     <script src="/static/js/jquery-3.2.1.js" charset="utf-8"></script>
+
+    <!-- Ressource appartenant à l'appli  -->
+    <link rel="stylesheet" href="static/css/welcome.css" media="screen" title="no title" charset="utf-8">
 
     <title></title>
   </head>
   <body>
-    <%= render %>
     <form id="formName" action="chooseGame" method="get" target="_self">
       <br>
       <br>
