--- a/src/cyborg_modules/welcome/client/waitforplayer.ejs
+++ b/src/cyborg_modules/welcome/client/waitforplayer.ejs
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- Ressource partagé à toute les applis ! Rajouté un / devant l'url -->
+    <script src="/static/js/jquery-3.2.1.js" charset="utf-8"></script>
+
+    <!-- Ressource appartenant à l'appli  -->
     <link rel="stylesheet" href="static/css/welcome.css" media="screen" title="no title" charset="utf-8">
 
-    <title></title>
+    <title>Wait for other player</title>
   </head>
   <body>
     <h1> <%= title %> </h1>
