welcome en mode module + test pfc

--- a/src/client/views/chooseGame.ejs
+++ b/src/client/views/chooseGame.ejs
@@ -7,7 +7,7 @@
     <script src="/static/js/jquery-3.2.1.js" charset="utf-8"></script>
 
     <!-- Ressource appartenant à l'appli  -->
-    <link rel="stylesheet" href="static/css/welcome.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/static/css/welcome.css" media="screen" title="no title" charset="utf-8">
 
     <title>Choose game</title>
   </head>
