--- a/src/client/views/waitforplayer.ejs
+++ b/src/client/views/waitforplayer.ejs
@@ -6,7 +6,7 @@
     <script src="/static/js/jquery-3.2.1.js" charset="utf-8"></script>
 
     <!-- Ressource appartenant à l'appli  -->
-    <link rel="stylesheet" href="static/css/welcome.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/static/css/welcome.css" media="screen" title="no title" charset="utf-8">
 
     <title>Wait for other player</title>
   </head>
@@ -15,6 +15,6 @@
     <p>
       En attente des autres joueurs...
     </p>
-    <a href="/game/" target="_self">GO</a>
+    <a href="<%= uriGame %> " target="_self">GO</a>
   </body>
 </html>
