--- a/src/client/views/cyborg.ejs
+++ b/src/client/views/cyborg.ejs
@@ -2,7 +2,7 @@
 <html>
   <!--
   Page principale, les applications sont lancées dans un iFrame.
-  L'objectif et de garder une connection synchrone en utilisant socket.io. et éviter le rafraichissement et donc la deconnection de l'utilisateur.
+  L objectif et de garder une connection synchrone en utilisant socket.io. et éviter le rafraichissement et donc la deconnection de l'utilisateur.
   -->
   <head>
     <meta charset="utf-8">
@@ -62,7 +62,7 @@
 
     <div id="main" class="pure-g">
         <div class="pure-u-1-1 main">
-            <iframe src="http://localhost:3001" id="mainFrame" class="main" sandbox="allow-forms allow-scripts allow-same-origin allow-top-navigation" >
+            <iframe src="welcome/home" id="mainFrame" class="main" sandbox="allow-forms allow-scripts allow-same-origin allow-top-navigation" >
               <p>Sorry, your browser does not support iframes. You can't use Cyborg for the moment :s Pieg.</p>
             </iframe>
         </div>
