--- a/src/client/views/welcome.ejs
+++ b/src/client/views/welcome.ejs
@@ -6,7 +6,7 @@
     <script src="/static/js/jquery-3.2.1.js" charset="utf-8"></script>
 
     <!-- Ressource appartenant à l'appli  -->
-    <link rel="stylesheet" href="static/css/welcome.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/static/css/welcome.css" media="screen" title="no title" charset="utf-8">
 
     <title></title>
   </head>
@@ -21,7 +21,7 @@
       <br>
       <br>
       <button type="submit"  id="validFormName">
-        <img src="static/img/ok.png" alt="Valid form">
+        <img src="/static/img/ok.png" alt="Valid form">
       </button>
     </form>
 
