add cmhm in project

--- a/src/cyborg_modules/cyborgmain_humain/client/cyborgmain_humain.ejs
+++ b/src/cyborg_modules/cyborgmain_humain/client/cyborgmain_humain.ejs
@@ -7,7 +7,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
 
 		<!-- Ressource appartenant à l'appli  -->
-		<link rel="stylesheet" href="static/css/tchoytchoy.css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="/static/css/tchoytchoy.css" media="screen" title="no title" charset="utf-8">
 
 		<title>CyborgMain - HuMain</title>
 	</head>
