--- a/src/client/views/chooseGame.ejs
+++ b/src/client/views/chooseGame.ejs
@@ -28,7 +28,7 @@
     <% for(var i=0; i<allGames.length; i++) {%>
         <p>
           <!-- <a href="/" onclick="javascript:event.target.port=3001"> -->
-          <a href="/game/new/<%-allGames[i].id-%>">
+          <a href="/welcome/new/<%-allGames[i].id-%>">
             <%= allGames[i].name %>
           </a>
         </p>
