fix some stuffs

--- a/src/cyborg_modules/pierre_feuille_ciseaux/views/menu.ejs
+++ b/src/cyborg_modules/pierre_feuille_ciseaux/views/menu.ejs
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    h1= idJoueur
+    <h1>  <%= idJoueur %> </h1>
     <form action="choix" method="POST">
       <input type="hidden" name="idJoueur" value="j#{idJoueur}">
       <input type="radio" name="choix" value="pierre" > Pierre <br>
