--- a/src/client/views/welcome.ejs
+++ b/src/client/views/welcome.ejs
@@ -11,11 +11,11 @@
     <title></title>
   </head>
   <body>
-    <form id="formName" action="chooseGame" method="get" target="_self">
+    <form id="formName" action="setName" method="get" target="_self">
       <br>
       <br>
       <br>
-      <input type="text" id="cyborgNameInput" class="form-control input-lg" placeholder="Entrez votre nom">
+      <input name="name" type="text" id="cyborgNameInput" class="form-control input-lg" placeholder="Entrez votre nom">
       <br>
       <br>
       <br>
