--- a/src/client/views/cyborg.ejs
+++ b/src/client/views/cyborg.ejs
@@ -144,8 +144,8 @@
     $('#numberOfPlayer').html(val);
   });
 
-  socket.on('srcIframe', function (val) {
-    document.getElementById('mainFrame').src = "http://localhost:8080/welcome/home";
+  socket.on('srcIframe', function (result) {
+    document.getElementById('mainFrame').src = "/welcome/home";
   });
 
 
