--- a/src/cyborg_modules/pile_face/views/pile_face.ejs
+++ b/src/cyborg_modules/pile_face/views/pile_face.ejs
@@ -21,7 +21,9 @@
 
 
       <script src="/socket.io/socket.io.js"></script>
-      <script src="/jquery/jquery-3.2.1.min.js"></script>
+	  <script src="/static/js/jquery-3.2.1.min.js" charset="utf-8"></script>
+	  <!-- <script src="/static/js/jquery-3.2.1.js" charset="utf-8"></script> -->
+      <!-- <script src="/jquery/jquery-3.2.1.min.js"></script> -->
 
       <script>
 
