--- a/src/client/views/cyborg.ejs
+++ b/src/client/views/cyborg.ejs
@@ -87,6 +87,7 @@
   //API Client cyborg
   cyborg = {};
   var socket = io();
+  cyborg.socket = socket;
   cyborg.isFullScreen = false;
   cyborg.changeName = function (name) {
 
